syntax = "proto3";

option go_package = "diyorbek.notification.v1;notificationpb";

service NotificationService{
  rpc CreateNotification(CreateNotificationReq)  returns (EmptyMessage);
  rpc GetNotification(GetNotificationReq) returns(GetNotificationRes);
  rpc AddNotification(AddNotificationReq) returns(EmptyMessage);
}




message Message {
  string created_at = 1;
  string sender_name = 2;
  string status = 3;
}

message CreateMessage {
  string sender_name = 2;
  string status = 3;
}

message CreateNotificationReq {
  string user_id = 1;
}



message Notification {
  string user_id = 1;
  int64 offset = 2;
  repeated Message messages  = 3;
}

message EmptyMessage{}

message GetNotificationReq {
  string user_id = 1;
  int64 offset = 2;
}

message GetNotificationRes {
  repeated  Message messages = 1;
}
message AddNotificationReq {
  string user_id = 1;
  CreateMessage messages =2;
}
